# rustc-test

./: Cargo.toml
benches/: all.rs
src/: __stdio.rs  lib.rs  macros.rs  stats.rs
tests/: all.rs  stats.rs
