[package]
name = "rustc-test"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
getopts = "0.2"
rustc-serialize = "0.3"
term = "0.2"
libc = "0.2"
time = "0.1"
kernel32-sys = "0.2"
winapi = "0.2"

[lib]
test = false

[[bench]]
name = "all"
harness = false

[[test]]
name = "all"
harness = false

[[test]]
name = "stats"
harness = false
